# client-casa-salco

./: nginx.conf  requerimientos.txt
PROYECTO ERP/agent/: .env.example  .gitignore  README.md  pyproject.toml
PROYECTO ERP/agent/jarvis_agent/: __init__.py  __main__.py  app.py  config.py
PROYECTO ERP/agent/jarvis_agent/api/: __init__.py  routes.py
PROYECTO ERP/agent/jarvis_agent/printer/: __init__.py  base.py  escpos_network.py  escpos_usb.py  factory.py  mock.py
PROYECTO ERP/agent/jarvis_agent/scale/: __init__.py  _serial_common.py  base.py  factory.py  kretz.py  mock.py  network.py  systel.py
PROYECTO ERP/agent/jarvis_agent/ticket/: __init__.py  renderer.py  templates.py
PROYECTO ERP/agent/tests/: conftest.py  test_api.py  test_mock_printer.py  test_renderer.py  test_scale.py
PROYECTO ERP/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  wsgi.py
PROYECTO ERP/backend/app/: __init__.py  config.py  extensions.py
PROYECTO ERP/backend/app/api/v1/: __init__.py  alertas.py  areas.py  articulos.py  auth.py  caes.py  calendario_pagos.py  clientes.py  comercio.py  consultas.py  facturas.py  familias.py  marcas.py  movimientos.py  ocr.py  precios.py  proveedores.py  reports.py  reposicion.py  rubros.py  stock.py  (+2 more)
PROYECTO ERP/backend/app/cli/: __init__.py  alerts.py  analytics.py
PROYECTO ERP/backend/app/models/: __init__.py  alerta.py  articulo.py  articulo_codigo.py  base.py  cae.py  calendario_pago.py  categorias.py  cliente.py  comercio.py  comprobante_ocr.py  factura.py  factura_item.py  pago.py  precio.py  proveedor.py  resumen.py  stock.py  sucursal.py  user.py
PROYECTO ERP/backend/app/schemas/: __init__.py  alerta.py  articulo.py  articulo_codigo.py  calendario_pago.py  categorias.py  cliente.py  comercio.py  common.py  factura.py  factura_item.py  movimiento_caja.py  ocr.py  pago.py  precio.py  proveedor.py  stock.py  sucursal.py  user.py
PROYECTO ERP/backend/app/seeds/: __init__.py  big.py  demo.py
PROYECTO ERP/backend/app/services/: __init__.py  auth_service.py  numeracion.py  pos_service.py  price_sync.py  stock_service.py
PROYECTO ERP/backend/app/sockets/: __init__.py  prices.py
PROYECTO ERP/backend/app/utils/: __init__.py  auth_guards.py  errors.py  pagination.py
PROYECTO ERP/backend/docs/: afip.md
PROYECTO ERP/backend/migrations/versions/: 03be592f9146_phase_2_1_facturas_items_pagos_.py  a1b2c3d4e5f6_alertas_inconsistencias.py  b2c3d4e5f6a7_ocr_comprobantes.py  c3d4e5f6a7b8_stock_inteligente.py  d49c6d370695_initial_schema.py  d4e5f6a7b8c9_calendario_pagos.py  e5f6a7b8c9d0_articulo_codigos.py  f06aff01a31a_comercio_config_singleton.py  f6a7b8c9d0e1_articulo_proveedor_cantidad.py
PROYECTO ERP/backend/tests/: conftest.py  test_afip_mock.py  test_alertas.py  test_articulo_codigos.py  test_articulo_codigos_migration.py  test_articulos.py  test_articulos_limit.py  test_auth.py  test_caes.py  test_caja.py  test_calendario_pagos.py  test_cantidad_por_pack_migration.py  test_comercio.py  test_consultas.py  test_correlaciones.py  test_exports.py  test_facturas.py  test_health.py  test_ocr.py  test_precios_sync.py  test_reports.py  test_stock_inteligente.py  test_sucursales.py  test_users.py
PROYECTO ERP/backend/tests/fixtures/: duplicados.py
PROYECTO ERP/frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
PROYECTO ERP/frontend/src-tauri/capabilities/: default.json
PROYECTO ERP/frontend/src-tauri/icons/: README.md
PROYECTO ERP/frontend/src-tauri/src/: lib.rs  main.rs
(+244 files in other folders)
