[package]
name = "jarvis-core"
version = "0.1.0"
description = "Jarvis Core ERP — desktop app"
edition = "2021"
authors = ["Jarvis Core"]
license = ""
repository = ""
default-run = "jarvis-core"

[lib]
name = "jarvis_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
